syntax = "proto3";

import "google/protobuf/empty.proto";

option java_multiple_files = true;
option java_package = "com.tradeix.core.grpc.books";
option java_outer_classname = "BooksProto";

service BooksService {
    rpc GetAllBooks(google.protobuf.Empty) returns (AllBooksResponse);
}

message AllBooksResponse {
    repeated BookDto books = 1;
}

message BookDto {
    int32 id = 1;
    string title = 2;
    int32 pages = 3;
    int32 authorId = 4;
}